@@ -1,5 +1,10 @@
 2006-08-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* doc/Makefile.am, doc/Doxyfile.in: Generate man links and selectively
+	install man pages.
+
+2006-08-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* doc/Makefile.am: Use html.stamp target to prevent unneccessary
 	generation of document.
 
@@ -891,13 +896,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.89 2006-08-01 12:14:49 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.90 2006-08-01 13:33:13 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.89 2006-08-01 12:14:49 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.90 2006-08-01 13:33:13 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
